--- a/TAP/views/consulta.handlebars
+++ b/TAP/views/consulta.handlebars
@@ -155,7 +155,7 @@
                         <button class="editar" onclick="window.location.href='/atualiza/{{id}}'">
                             Editar
                         </button>
-                        <button class="excluir" onclick="excluirDados('{{id}}')">
+                        <button class="excluir" onclick="window.location.href='/excluir/{{id}}'">
                             Excluir
                         </button>
                     </div>
